--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "archtechx/enums": "^1.0",
         "carbonphp/carbon-doctrine-types": "^2.1",
         "cviebrock/eloquent-sluggable": "^10.0",
+        "darryldecode/cart": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^4.2",
