--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "livewire/livewire": "^3.0",
         "power-components/livewire-powergrid": "^5.3",
         "rappasoft/laravel-livewire-tables": "^3.2",
+        "spatie/laravel-permission": "^6.4",
         "tallstackui/tallstackui": "^1.15"
     },
     "require-dev": {
